# granite-local

./: README.md  main.py  pyproject.toml
embedding/: main.py
search-agent/: demo.py  prompt.py  test_fallback_keyword_extraction.py
structured-output/: main.py
tools/: agent-loop-demo.py  get_stock_price.py  get_weather.py  main.py
