[project]
name = "granite-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "duckduckgo-search>=8.0.2",
    "jinja2>=3.1.6",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "transformers>=4.52.4",
]
